# Proyecto_RAG

./: .gitignore  LICENSE  Makefile  README.md  analisis_preguntas.json  package-lock.json  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
scripts/: chunker_llama.py  embeddings_llama.py  main.py  parser_docling.py  pinecone_client.py  streamlit_app.py
scripts/agente/: agentes.py  run.py
scripts/agente_dashboard_mejorado/: agente_eda.py  main.py
scripts/agente_dashboards/: agente_analizador_csv.py  agente_generador_dashboard.py  calculador.py  config.py  main.py  prompts.py
scripts/agente_google_adk/: pyproject.toml
scripts/agente_proyecto_plataforma/: test_superbase.py
scripts/agentes/: agent_config.py  agente_dashboard_adk.py  agente_dashboard_react.py  agente_postprocesamiento.py  test_agente_dashboard.py  test_api_google.py
scripts/delete/: clear_index.py
scripts/embeddings/: Avances tecnológicos actuales en México 2024-2025_embeddings.json  Diagrama_RAG_embeddings.json  Gato negro_embeddings.json  Gato siamés_embeddings.json  Historia del gato_embeddings.json  Los Desafíos Ambientales Más Urgentes de México en 2025_embeddings.json  Maine Coon_embeddings.json  México, un eje crítico del tráfico ilegal de fauna silvestre_ 473 especies confiscadas en 20 Años_embeddings.json  México_embeddings.json  Test_embeddings.json  Uruapan_embeddings.json  gato_embeddings.json  test_imagen_embeddings.json
scripts_test/: main.py  parser_docling.py
tests/: chunker_llama.py  embeddings_llama.py  main.py  parser_llama.py  test_debug.py
(+120 files in other folders)
